src/objects/BMCServiceDesk__BMC_Share__c.object
<CustomObject>
    <description>BMC_Share. CMDB Class that stores information about components, such as files, folders, or printers, that are shared by multiple computer systems or users. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Access_Mask__c</fullName>
        <label>Access Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Maximum_Allowed__c</fullName>
        <label>Maximum Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Share</label>
    <nameField>
        <label>Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>